--- a/login.html
+++ b/login.html
@@ -49,6 +49,7 @@
     </div>
 
     <div class="logo">
+        <a href="index.html">
         <svg version="1.1" x="0px" y="0px" width="120" height="52" viewBox="0 0 6020 1000" enable-background="new 0 0 6020 1000" xml:space="preserve" class="ce__Header__headerImage" aria-label="HBO Max"><g><path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M713.3,995.6H447.2V616.1H274.9v379.5H2.3V16.4h272.6v365.3
             h172.3V16.4h266.1V995.6L713.3,995.6z M1933.6,1000c272.6,0,495.1-226.8,495.1-502.7C2428.7,217,2206.2,0,1933.6,0
             c-275.9,0-415.5,200.7-449.3,282.4c0-121-121.1-266.1-261.7-266.1H767.9v979.3H1191c172.3,0,293.3-147.2,293.3-275.9
@@ -76,6 +77,7 @@
                 c1.7,0.6,3.9,1.4,6.8,2.6c2.8,1.2,5,2.2,6.6,3.2c1.5,1,3.3,2.4,5.3,4.1c2,1.7,3.5,3.4,4.6,5.2c1,1.8,2,4,2.7,6.5s1.1,5.3,1.1,8.3
                 c0,9.7-3.5,17.4-10.6,23.1C5877.1,119.3,5867.9,122.1,5856.6,122.1z"></path><path fill="#FFFFFF" d="M6017.7,15v105h-20.5V51.9l-29.5,48.8h-2.4l-29.5-48.6v68h-20.7V15h21.3l30.2,49.6l30-49.6
                 C5996.6,15,6017.7,15,6017.7,15z"></path></g></g></svg>
+                </a>
     </div>
 
     <div class="busca">
@@ -87,7 +89,7 @@
     </div>
 
     <div class="as">
-        <button class="assinar">Assinar</button>
+       <a href="index.html"> <button class="assinar">Assinar</button></a>
     </div>
 
     </div>
