Login funcionando falta ajustes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </a>
         </div>
         <div class="entrar">
-                <a href="login.html" id="login"><p>ENTRAR</p></a>
+                <a href="Login.html" id="login"><p>ENTRAR</p></a>
         </div>
     </header>
 
