Perfil e Catalago em desenvolvimento

--- a/catalago.html
+++ b/catalago.html
@@ -79,9 +79,16 @@
                 <span class="material-symbols-outlined" id="user">account_circle</span>
             </div>
             </header>
+
+            <main>
+                <div class="carrosel">
+                    
+                </div>
+            </main>
     
 
 
-    <script src="js/catalago.js"></script>
+            <script src="js/Login.js"></script>
+            <script src="js/catalago.js"></script>
 </body>
 </html>
