--- a/login.html
+++ b/login.html
@@ -116,7 +116,7 @@
                     <input class="password" id="senha" type="password" placeholder="Senha" name="password" required>  <br>
                 </div>
                
-                <button class="btn_entrar" id="butao" type="submit"><h3>Entrar</h3></button>  
+                <button class="btn_entrar" id="butao" type="submit" onclick="handleClick()"><h3>Entrar</h3></button>  
                 <h4 class="Help"><a href="#" class="help_a">Esqueceu a Senha?</a></h4>
           
                 <div class="center">
