--- a/perfil.html
+++ b/perfil.html
@@ -58,7 +58,7 @@
 
                 </div>
                 <div class="perfil_img">
-                    <img class="foto_perfil " id="card_perfil" src="image/Jake_teste.png" alt="Foto de Perfil">
+                    <img class="foto_perfil " id="card_perfil" src="images/Jake_teste.png" alt="Foto de Perfil">
                 </div>
                 <div class="texto">
                     <p class="txt_name" id="txt_nome"></p>
