--- a/catalogo.html
+++ b/catalogo.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Teste</title>
+  <title>Catálogo </title>
   <link rel="stylesheet" href="css/framework/bootstrap.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <!-- i will provide this in description  -->
@@ -39,15 +39,15 @@
           <span></span>
         </div>
         <ul>
-          <li><a href="#">Início</a></li>
-          <li><a href="#">Séries</a></li>
-          <li><a href="#">Filmes</a></li>
-          <li><a href="#">Originais</a></li>
-          <li><a href="#">Adicionados <br> Recentemente</a></li>
-          <li><a href="#">Últimos Dias</a></li>
-          <li><a href="#">Em Breve</a></li>
-          <li><a href="#">Em Alta</a></li>
-          <li><a href="#">Aproveite grátis</a></li>
+          <li><a class="menu_conteudo" href="#">Início</a></li>
+          <li><a class="menu_conteudo" href="#">Séries</a></li>
+          <li><a class="menu_conteudo" href="#">Filmes</a></li>
+          <li><a class="menu_conteudo" href="#">Originais</a></li>
+          <li><a class="menu_conteudo" href="#">Adicionados <br> Recentemente</a></li>
+          <li><a class="menu_conteudo" href="#">Últimos Dias</a></li>
+          <li><a class="menu_conteudo" href="#">Em Breve</a></li>
+          <li><a class="menu_conteudo" href="#">Em Alta</a></li>
+          <li><a class="menu_conteudo" href="#">Aproveite grátis</a></li>
         </ul>
 
       </nav>
